test/Fail/Issue5434-2.err
Issue5434-2.agda:6.3-27: error: [UnusableAtModality]
(@0 x y : D) → x ≡ y is not usable at the required modality @ω
when checking the constructor c in the declaration of D
